# quetzal-CoaTL

./: .clang-format  .gitignore  .gitmodules  Allele_8hpp_source.html  BIT_8hpp_source.html  CMakeLists.txt  CmakePresets.json  DiploidIndividual_8hpp_source.html  DiscreteDistribution_8hpp_source.html  DiscreteTimeWrightFisher_8hpp_source.html  FlowHashMapImplementation_8hpp_source.html  FlowOnDiskImplementation_8hpp_source.html  Forest_8hpp_source.html  ForwardBackwardSpatiallyExplicit_8hpp_source.html  FuzzyPartition_8hpp_source.html  HistoryBase_8hpp_source.html  History_8hpp_source.html  Hudson_8hpp_source.html  IAM_8hpp_source.html  JC69_8hpp_source.html  Network_8hpp_source.html  OccupancySpectrum_8hpp_source.html  Partitioner_8hpp_source.html  PointWithId_8hpp_source.html  PopulationSizeHashMapImplementation_8hpp_source.html  PopulationSizeOnDiskImplementation_8hpp_source.html  ProbabilityDistribution_8hpp_source.html  README.md  RestrictedGrowthString_8hpp_source.html  SpatialGeneticSampleLoader_8hpp_source.html  SpatialGeneticSample_8hpp_source.html  Support_8hpp_source.html  TransitionKernel_8hpp_source.html  Tree_8hpp_source.html  abc.h  accumulator_8hpp_source.html  adl__resolution_8hpp_source.html  annotated.html  annotated_dup.js  ast_8hpp_source.html  (+1377 more)
docs/: 1-introduction.md  2-abstract.md  2-installation.md  3-include.md  3-installation.md  4-tutorials.md  5-tutorials.md  99-developers-notes.md  CMakeLists.txt  Doxyfile  Doxyfile.in  DoxygenLayout.xml  accumulators.md  header.html  index.html  index.md  index.rst  mainpage.md  trash.md
docs/api/: Allele_8h_source.html  BIT_8hpp_source.html  BaseHistory_8h_source.html  DiploidIndividual_8h_source.html  DiploidIndividual_8hpp_source.html  DiscreteDistribution_8h_source.html  DiscreteDistribution_8hpp_source.html  DiscreteLandscape_8h_source.html  DiscreteTimeWrightFisher_8h_source.html  DiscreteTimeWrightFisher_8hpp_source.html  EnvironmentalQuantity_8h_source.html  Extent_8h_source.html  FlowHashMapImplementation_8h_source.html  FlowHashMapImplementation_8hpp_source.html  FlowOnDiskImplementation_8h_source.html  Flow_8h_source.html  Forest_8h_source.html  ForwardBackwardSpatiallyExplicit_8h_source.html  FuzzyPartition_8h_source.html  FuzzyPartition_8hpp_source.html  Generator_8h_source.html  GeographicCoordinates_8h_source.html  HistoryBase_8h_source.html  HistoryBase_8hpp_source.html  History_8h_source.html  History_8hpp_source.html  Hudson_8hpp_source.html  JC69_8hpp_source.html  OccupancySpectrumDistribution_8h_source.html  OccupancySpectrum_8h_source.html  OccupancySpectrum_8hpp_source.html  Partitioner_8h_source.html  Partitioner_8hpp_source.html  PointWithId_8h_source.html  PointWithId_8hpp_source.html  PopulationSizeHashMapImplementation_8h_source.html  PopulationSizeHashMapImplementation_8hpp_source.html  PopulationSizeOnDiskImplementation_8h_source.html  PopulationSizeOnDiskImplementation_8hpp_source.html  ProbabilityDistribution_8h_source.html  (+1005 more)
docs/drafts/: 2-abstract.md
docs/examples/: WrightFisher.cpp  accumulators.cpp  compute_tajimasD.cpp
docs/html/: Allele_8h_source.html  Forest_8h_source.html  GeographicCoordinates_8h_source.html  PopulationSizeHashMapImplementation_8h_source.html  PopulationSizeOnDiskImplementation_8h_source.html  Resolution_8h_source.html  RestrictedGrowthString_8h_source.html  classquetzal_1_1ForwardBackwardSpatiallyExplicit-members.html  classquetzal_1_1ForwardBackwardSpatiallyExplicit__coll__graph.map  classquetzal_1_1cell__JC69.html  classquetzal_1_1coalescence_1_1Forest.html  classquetzal_1_1coalescence_1_1Tree-members.html  classquetzal_1_1coalescence_1_1Tree.html  classquetzal_1_1coalescence_1_1newick__with__distance__to__parent__and__leaf__name.html  classquetzal_1_1coalescence_1_1newick__with__distance__to__parent__and__leaf__name_1_1cell__type-members.html  classquetzal_1_1coalescence_1_1newick__with__distance__to__parent__and__leaf__name_1_1cell__type__coll__graph.map  classquetzal_1_1demography_1_1History-members.html  classquetzal_1_1demography_1_1History_3_01Space_00_01dispersal__policy_1_1individual__based_00_01Memory_01_4-members.html  classquetzal_1_1demography_1_1History_3_01Space_00_01dispersal__policy_1_1individual__based_00_01Memory_01_4__coll__graph.md5  classquetzal_1_1demography_1_1History_3_01Space_00_01dispersal__policy_1_1mass__based_00_01Memory_01_4-members.html  classquetzal_1_1demography_1_1History__coll__graph.map  classquetzal_1_1demography_1_1PopulationSizeOnDiskImplementation-members.html  classquetzal_1_1demography_1_1dispersal__kernel_1_1ExponentialPower_1_1param__type-members.html  classquetzal_1_1demography_1_1dispersal__kernel_1_1GaussianMixture_1_1param__type.html  classquetzal_1_1demography_1_1dispersal__kernel_1_1Gaussian_1_1param__type.html  classquetzal_1_1demography_1_1dispersal__kernel_1_1Logistic_1_1param__type.html  classquetzal_1_1fuzzy__transfer__distance_1_1FuzzyPartition.html  (+89 more)
example/: CMakeLists.txt  coalescence_binary_tree_1.cpp  coalescence_binary_tree_2.cpp  coalescence_binary_tree_3.cpp  coalescence_binary_tree_4.cpp  coalescence_k_ary_tree_1.cpp  coalescence_k_ary_tree_2.cpp  coalescence_k_ary_tree_3.cpp  coalescence_k_ary_tree_4.cpp  compute_tajimasD.cpp  demography_dispersal_kernel.cpp  dispersal_kernel.cpp  expressive_1.cpp  expressive_2.cpp  expressive_3.cpp  expressive_4.cpp  geography_dispersal_kernel_1.cpp  geography_dispersal_kernel_2.cpp  geography_dispersal_kernel_3.cpp  geography_dispersal_kernel_4.cpp  geography_graph_1.cpp  geography_graph_2.cpp  geography_graph_3.cpp  geography_graph_4.cpp  geography_graph_5.cpp  geography_graph_6.cpp  geography_graph_7.cpp  geography_graph_complete.cpp  geography_graph_complete_1.cpp  geography_graph_complete_2.cpp  geography_graph_local_1.cpp  geography_graph_local_process_1.cpp  geography_graph_local_process_2.cpp  geography_graph_local_process_3.cpp  geography_graph_local_process_4.cpp  geography_landscape_1.cpp  geography_raster_1 copy.cpp  geography_raster_1.cpp  geography_variable_1.cpp  geography_write_quantity_1.cpp  (+14 more)
src/: CMakeLists.txt
test/: CMakeLists.txt
(+1295 files in other folders)
